# Parzley_MCP

./: .dockerignore  Dockerfile  README.md  main.py  nixpacks.toml  parzley_mcp_server.py  pyproject.toml  railway.toml
parzley_mcp/: __init__.py  config.py  http_client.py  instructions.py  mcp_tool_doc.py  server.py
parzley_mcp/tools/: __init__.py  analyse_content.py  chat.py  content.py  display.py  editor.py  extract_content.py  get_form_data_by_session.py  get_form_data_feedback.py  get_form_definition.py  get_form_with_shortcode.py  get_schema.py  parzley_message_turn.py  register_respondent.py  session.py  start_session.py  submit_form.py  submit_form_data.py
tests/: test_smoke.py
