[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "parzley-mcp"
version = "0.1.0"
description = "Parzley AI Form Filling Agent — MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["parzley_mcp"]

